--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,42 @@
   padding: 0;
   box-sizing: border-box;
 }
+header{
+  background-color: black;
+  padding: 1rem;
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.event-search{ 
+  padding: 1rem;
+  display: flex;
+  width: 100%;
+}
+
+input.event-search-box{
+  border: 2px solid black;
+}
+ul{
+  padding: 1rem;
+}
+ul li{
+  list-style: none;
+  margin: 1rem;
+  padding: 1rem;
+  background-color: rgb(161, 161, 161);
+}
+button{
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  border: none;
+  cursor: pointer;
+}
+footer{
+  background-color: black;
+  padding: 1rem;
+  color: white;
+  text-align: center;
+}
